product feature checkpoint

--- a/src/index.css
+++ b/src/index.css
@@ -2,24 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
-
-
-*{
+* {
   font-family: poppins, sans-serif;
 }
 
-.blink{
+.blink {
   animation: blinker 1s infinite;
 }
 
 @keyframes blinker {
-  0%{
+  0% {
     opacity: 0;
   }
 
-  100%{
+  100% {
     opacity: 1;
   }
-
 }
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
